// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches expected output: co-authored-by.header: 45178502b2cdd06958b837cb5b8a0cf8 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
From 160feaf6d2637b22216987d1f95b96d585a838a6 Mon Sep 17 00:00:00 2001
From: =?UTF-8?q?Martin=20Zl=C3=A1mal?= <mrtnzlml@gmail.com>
Date: Thu, 15 Apr 2021 13:18:49 -0500
Subject: [PATCH] SX Design: add Norwegian language

Co-authored-by: Trond Bergquist <trond_bergquist@hotmail.com>


~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "coAuthorLines": [
    "Co-authored-by: Trond Bergquist <trond_bergquist@hotmail.com>"
  ],
  "debugMessages": [],
  "description": "",
  "author": "=?UTF-8?q?Martin=20Zl=C3=A1mal?= <mrtnzlml@gmail.com>",
  "timestamp": "Thu, 15 Apr 2021 13:18:49 -0500",
  "subject": "SX Design: add Norwegian language"
}
`;

exports[`matches expected output: co-authored-by-multiple.header: 45178502b2cdd06958b837cb5b8a0cf8 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
From 160feaf6d2637b22216987d1f95b96d585a838a6 Mon Sep 17 00:00:00 2001
From: =?UTF-8?q?Martin=20Zl=C3=A1mal?= <mrtnzlml@gmail.com>
Date: Thu, 15 Apr 2021 13:18:49 -0500
Subject: [PATCH] SX Design: add Norwegian language

Co-authored-by: Trond Bergquist <trond_bergquist@hotmail.com>
Co-authored-by: Patricia Bergquist <patricia_bergquist@hotmail.com>


~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "coAuthorLines": [
    "Co-authored-by: Trond Bergquist <trond_bergquist@hotmail.com>",
    "Co-authored-by: Patricia Bergquist <patricia_bergquist@hotmail.com>"
  ],
  "debugMessages": [],
  "description": "",
  "author": "=?UTF-8?q?Martin=20Zl=C3=A1mal?= <mrtnzlml@gmail.com>",
  "timestamp": "Thu, 15 Apr 2021 13:18:49 -0500",
  "subject": "SX Design: add Norwegian language"
}
`;

exports[`matches expected output: multiline-subject.header: 45178502b2cdd06958b837cb5b8a0cf8 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
From 93ee65de02e77c52eb9d677b859554b40253bafa Mon Sep 17 00:00:00 2001
From: =?UTF-8?q?Martin=20Zl=C3=A1mal?= <adeira@example.com>
Date: Wed, 10 Apr 2019 16:50:47 -0500
Subject: [PATCH] Docs: add Relay and GraphQL related videos from our internal
 JS Saturday


~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "coAuthorLines": [],
  "debugMessages": [],
  "description": "",
  "author": "=?UTF-8?q?Martin=20Zl=C3=A1mal?= <adeira@example.com>",
  "timestamp": "Wed, 10 Apr 2019 16:50:47 -0500",
  "subject": "Docs: add Relay and GraphQL related videos from our internal JS Saturday"
}
`;

exports[`matches expected output: simple.header: 45178502b2cdd06958b837cb5b8a0cf8 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
From bf0a8783cf416f796659e60fe735bba98e676e67 Mon Sep 17 00:00:00 2001
From: Automator <adeira@example.com>
Date: Mon, 4 Feb 2019 13:29:04 -0600
Subject: [PATCH] Import and publish '@adeira/relay' (0.1.0)

Formerly known as '@mrtnzlml/relay'


~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "coAuthorLines": [],
  "debugMessages": [],
  "description": "Formerly known as '@mrtnzlml/relay'",
  "author": "Automator <adeira@example.com>",
  "timestamp": "Mon, 4 Feb 2019 13:29:04 -0600",
  "subject": "Import and publish '@adeira/relay' (0.1.0)"
}
`;

exports[`matches expected output: unicode.header: 45178502b2cdd06958b837cb5b8a0cf8 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
From 0000000000000000000000000000000000000000 Mon Sep 17 00:00:00 2001
From: =?UTF-8?q?Martin=20Zl=C3=A1mal?= <adeira@example.com>
Date: Wed, 10 Apr 2019 16:50:47 -0500
Subject: [PATCH] Let's party 🍺 🍻 🍷 🍸😀 😬 😁 😂 😃 😄 😅


~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "coAuthorLines": [],
  "debugMessages": [],
  "description": "",
  "author": "=?UTF-8?q?Martin=20Zl=C3=A1mal?= <adeira@example.com>",
  "timestamp": "Wed, 10 Apr 2019 16:50:47 -0500",
  "subject": "Let's party 🍺 🍻 🍷 🍸😀 😬 😁 😂 😃 😄 😅"
}
`;
